# rustify-player

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  vite.config.ts
.claude/agent-memory/rustify-player-dev/: MEMORY.md  feedback_agent_model.md  feedback_plan_consistency.md  project_bit_perfect_decision.md  project_cork_xruns_fix.md  project_pipewire_migration_done.md
.claude/agents/: rustify-player-dev.md
design-refs/files/albums_view_pure_css/: code.html
design-refs/files/artists_view_pure_css/: code.html
design-refs/files/eq_dsp_view/: code.html
design-refs/files/library_view_pure_css/: code.html
design-refs/files/monolith_hifi/: DESIGN.md
design-refs/files/now_playing_with_lyrics_technical_info/: code.html
design-refs/files/system_settings_technical_brutalist/: code.html
docs/: SPECS-CONSOLIDATED.md  cheatsheet.md  spec-autoplay-inteligente-consolidado.md  ui-generation-system-prompt.md
docs/adr/: 001-pipewire-native-backend.md
docs/contexto/: 02052026-implicit-feedback-smart-station-semantic-search.md  02052026-solid-migration-v1.md  02052026-solid-migration-v2-complete.md  18042026-subsistema-b-completo-tauri-wiring.md  19042026-audio-playback-debug-github-release.md  19042026-pipewire-migration-ui-features.md  24042026-crackling-hipoteses-eliminadas.md  24042026-ui-polish-e-state-machine-fix.md  26042026-frontend-features-integration.md  26042026-mcp-bridge-easyeffects-cleanup.md  29042026-lyrics-pipeline-v2.md
docs/prompts/: 02052026-implicit-feedback-smart-station-semantic-search.md  02052026-solid-migration-v1.md  02052026-solid-migration-v2-complete.md  18042026-subsistema-b-completo-tauri-wiring.md  19042026-audio-playback-debug-github-release.md  19042026-pipewire-migration-ui-features.md  24042026-crackling-hipoteses-eliminadas.md  24042026-ui-polish-e-state-machine-fix.md  26042026-frontend-features-integration.md  26042026-mcp-bridge-easyeffects-cleanup.md  29042026-lyrics-pipeline-v2.md  music-organization-agent-context.md
docs/superpowers/plans/: 2026-04-26-global-search.md  2026-04-26-like-favorites.md  2026-04-26-search-like-moods-backend.md  2026-04-26-stations-view.md  2026-05-02-implicit-feedback-qdrant.md  2026-05-02-lyrics-scraping-pipeline.md
docs/superpowers/specs/: 2026-04-26-frontend-features-design.md  2026-04-26-search-like-moods-design.md  2026-05-02-expanded-event-tracking-design.md  2026-05-02-implicit-feedback-qdrant-design.md  2026-05-02-mood-search-design.md
scripts/: align_lyrics.py  deploy-lyrics.py  download_v2_results.py  embed_lyrics.py  fetch-lyrics-fast.py  fetch-lyrics.py  gemini-annotate-tracks.py  gemini-review-annotations.py  gemini-ui-gen.py  gemini_mood_classifier.py  lyrics_sources.py  modal_acestep_transcriber.py  modal_bs_roformer.py  modal_lyrics_aligner.py  release.sh  rustify-update.sh  scrape_lyrics.py
services/rustify-embed/: Dockerfile  README.md  app.py  requirements.txt  rustify-embed.service
src/: App.tsx  index.html  main.js  main.tsx  router.tsx  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/audio-engine/: Cargo.toml
src-tauri/crates/audio-engine/examples/: play_file.rs
src-tauri/crates/audio-engine/src/: decoder.rs  engine.rs  error.rs  lib.rs  position.rs  queue.rs  types.rs
src-tauri/crates/audio-engine/src/output/: cpal_backend.rs  dsp.rs  gstreamer_backend.rs  mod.rs  pipewire_backend.rs
src-tauri/crates/audio-engine/tests/: decoder_roundtrip.rs  gapless.rs
src-tauri/crates/audio-engine/tests/common/: mod.rs
src-tauri/crates/library-indexer/: Cargo.toml
src-tauri/crates/library-indexer/examples/: scan_folder.rs
src-tauri/crates/library-indexer/migrations/: 001_initial.sql  002_add_lrc_path.sql  003_add_embedded_lyrics.sql  004_add_liked_at.sql  005_mood_playlists.sql  006_mood_accent_cover.sql  007_fts_content_synced.sql  008_play_events.sql
src-tauri/crates/library-indexer/seeds/: genres.json
src-tauri/crates/library-indexer/src/: cover.rs  db.rs  embed_client.rs  error.rs  lib.rs  lyrics.rs  metadata.rs  pipeline.rs  play_events.rs  qdrant_client.rs  scan.rs  search.rs  types.rs  watch.rs
src-tauri/crates/library-indexer/tests/: play_events.rs  qdrant_client.rs
src-tauri/icons/: icon.icns
src-tauri/src/: easyeffects.rs  lib.rs  main.rs  qdrant_process.rs
src/components/: PlayerBar.tsx  Sidebar.tsx  Titlebar.tsx
src/js/: router.js
src/js/components/: context-menu.js  player-bar.js  resources.js  search-bar.js  sidebar.js  tweaks.js
src/js/utils/: events.js  format.js
src/js/views/: _view.js  album.js  albums.js  artist.js  artists.js  history.js  home.js  library.js  now-playing.js  playlists.js  queue.js  settings.js  signal.js  stations.js  tracks.js
src/store/: dsp.ts  player.ts
src/styles/: base.css  components.css  layout.css  tokens.css
src/views/: Album.tsx  Albums.tsx  Artist.tsx  Artists.tsx  History.tsx  Home.tsx  Library.tsx  NowPlaying.tsx  Playlists.tsx  Queue.tsx  Settings.tsx  Signal.tsx  Stations.tsx  Tracks.tsx
