[workspace]
members = [".", "crates/audio-engine"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.78"
authors = ["PedroGiudice"]
license = "MIT"

[workspace.dependencies]
# Audio stack
symphonia = { version = "0.5.4", default-features = false, features = ["flac"] }
cpal = "0.17"
rtrb = "0.3"
crossbeam-channel = "0.5"

# Foundational
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }

# CLI
clap = { version = "4", features = ["derive"] }

[package]
name = "rustify-player"
version = "0.1.0"
description = "Player de musica audiofilo - Tauri shell"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lib]
name = "rustify_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = "1"
