[workspace]
members = [".", "crates/audio-engine", "crates/library-indexer"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.78"
authors = ["PedroGiudice"]
license = "MIT"

[workspace.dependencies]
# Audio stack
symphonia = { version = "0.5.4", default-features = false, features = ["flac"] }
pipewire = "0.9"
libspa = "0.9"
rtrb = "0.3"
crossbeam-channel = "0.5"
gstreamer = { version = "0.25", features = ["v1_20"] }
gstreamer-play = { version = "0.25", features = ["v1_22"] }
gstreamer-audio = "0.25"

# Foundational
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Library indexer stack
rusqlite = { version = "0.32", features = ["bundled", "blob", "limits"] }
walkdir = "2"
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
rubato = "0.15"
sha1 = "0.10"
sha2 = "0.10"
unicode-normalization = "0.1"
strsim = "0.11"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
zstd = { version = "0.13", default-features = false }
tempfile = "3"

[package]
name = "rustify-player"
version = "0.2.0"
description = "Player de musica audiofilo - Tauri shell"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lib]
name = "rustify_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = "1"
tracing-subscriber = { workspace = true }
library-indexer = { path = "crates/library-indexer" }
audio-engine = { path = "crates/audio-engine", features = ["serde"] }
tauri-plugin-fs = "2.5.0"
tauri-plugin-dialog = "2"
tauri-plugin-mcp-bridge = "0.11.1"
souvlaki = { version = "0.7", default-features = false, features = ["use_zbus"] }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }
