[package]
name = "audio-engine"
version = "0.1.0"
description = "Audio decoding and playback engine for rustify-player (FLAC + native PipeWire)"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lib]
name = "audio_engine"
path = "src/lib.rs"

[dependencies]
symphonia = { workspace = true }
pipewire = { workspace = true }
libspa = { workspace = true }
rtrb = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
thread-priority = "1.2"
serde = { workspace = true, optional = true }

[dev-dependencies]
# Used by integration tests and examples.
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[features]
default = []
serde = ["dep:serde"]

[[example]]
name = "play_file"
path = "examples/play_file.rs"
