[package]
name = "audio-engine"
version = "0.1.0"
description = "Audio decoding and playback engine for rustify-player (GStreamer backend)"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lib]
name = "audio_engine"
path = "src/lib.rs"

[dependencies]
gstreamer = { workspace = true }
gstreamer-play = { workspace = true }
gstreamer-audio = { workspace = true }
symphonia = { workspace = true }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[features]
default = []
serde = ["dep:serde"]

[[example]]
name = "play_file"
path = "examples/play_file.rs"
